--- a/ask-cody-ember/base.css
+++ b/ask-cody-ember/base.css
@@ -26,8 +26,7 @@
    height: 1px;
    min-height: 100px;
 }
-
-.active, #trigger:hover{
+ #trigger:hover{
 	background-color: #fff;
 	color: #036;
 }
